tests/parser/valid/precedence-bitwise-grouped.inox
== SPDX-License-Identifier: MPL-2.0
== Copyright © 2026 Marcelo Fortes and Inox contributors. All rights reserved.
==
== This Source Code Form is subject to the terms of the Mozilla Public
== License, v. 2.0. If a copy of the MPL was not distributed with this
== file, You can obtain one at https://mozilla.org/MPL/2.0/.

== Mixed bitwise families are allowed WHEN explicitly parenthesized.

Module PrecedenceBitwiseGrouped

Main :
    A := 12
    B := 10
    C := 6
    R1 := (A bitand B) bitor C
    R2 := A bitand B bitand C
    R3 := (A bitand B) shl C
    PutLn(R1)
;
