tests/parser/invalid/precedence-mix-bitand-bitor.inox
== SPDX-License-Identifier: MPL-2.0
== Copyright © 2026 Marcelo Fortes and Inox contributors. All rights reserved.
==
== This Source Code Form is subject to the terms of the Mozilla Public
== License, v. 2.0. If a copy of the MPL was not distributed with this
== file, You can obtain one at https://mozilla.org/MPL/2.0/.

== Mixing bitwise 'bitand' and 'bitor' without parentheses is a canonical error.

Module PrecedenceMixBitandBitor

Main :
    A := 12
    B := 10
    C := 6
    R := A bitand B bitor C
    PutLn(R)
;
